[package]
name = "search-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.18", features = ["json"] }
concurrent-queue = "2.2.0"
mysql = "24.0.0"
keyword_extraction = "1.1.2"
select = "0.6.0"
url = "2.3.1"
